new /v1/stop and /v1/pause services
